kubernetes-volumes/minio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  rules:
  - http:
      paths:
      - path: /minio
        backend:
          serviceName: minio
          servicePort: 9000
